# CraftNE

./: .env.example  MTDCmca.py  README.md  block_id_map.py  celery_worker.py  components.d.ts  data_loader.py  data_preprocessor.py  gradio_ui.py  index.html  inference.py  mca_parser_demo.py  package-lock.json  package.json  project_structure.txt  requirements.txt  run.py  train_model.py  tsconfig.json  vite.config.ts
.gradio/flagged/: dataset1.csv
app/: __init__.py  tasks.py
app/models/: __init__.py  annotation.py  map_data.py  training_job.py
app/services/: __init__.py  map_generator.py  mca_parser.py  model_trainer.py  obj_exporter.py
app/templates/: base.html  dashboard.html  index.html  map_list.html  map_viewer.html  upload.html
app/utils/: __init__.py  cache.py  decorators.py  error_handlers.py  logging_config.py  response.py  validators.py
app/views/: __init__.py  annotation.py  api.py  generation.py  main.py  upload.py
config/: celery_config.py  config.py  mca_parser_config.py
python/: check_environment.py  dataset_processor.py  inference.py
src/: App.vue  App.vue.js  main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/ai_engine/: mod.rs  model_manager.rs
src-tauri/src/models/: item_texture_generator.rs  mod.rs  skin_generator.rs
src/components/: AIModuleTemplate.vue  AIModuleTemplate.vue.js
src/composables/: useModelManager.ts
src/stores/: itemStore.ts  skinStore.ts
src/views/: Home.vue  Home.vue.js  ItemTextureGenerator.vue  MapGenerator.vue  MapGenerator.vue.js  SkinGenerator.vue  (+3 more)
(+6 files in other folders)
