[package]
name = "craftne"
version = "0.1.0"
description = "Minecraft AI Development Toolkit"
authors = ["AsagiriBeta"]
license = "MIT"
repository = "https://github.com/AsagiriBeta/craftne"
default-run = "craftne"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = { version = "2.0" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
